[package]
name = "mailboxer"
version = "2.0.0"
authors = ["Rotem Yaari <vmalloc@gmail.com>"]

[dependencies]
log = "0.4.5"
env_logger = "0.5.13"
diesel = { version = "1.3.0", features = ["postgres", "r2d2"] }
dotenv = "0.13.0"
failure = "0.1.3"
actix-web = "0.7.8"
serde_derive = "1.0.79"
serde_json = "1.0.32"
serde = "1.0.79"
futures = "0.1.25"
diesel_migrations = "1.3.0"
r2d2 = "0.8.2"
native-tls = "0.2.1"
actix = "0.7.5"
sentry = "0.12.0"
sentry-actix = "0.12.0"
