[package]
authors = ["Rotem Yaari <vmalloc@gmail.com>"]
edition = "2018"
name = "mailboxer"
version = "2.0.1"

[dependencies]
actix = "0.7.5"
actix-web = "0.7.8"
diesel = {version = "1.3.0", features = ["postgres", "r2d2"]}
diesel_migrations = "1.3.0"
dotenv = "0.13.0"
env_logger = "0.5.13"
failure = "0.1.3"
futures = "0.1.25"
log = "0.4.5"
native-tls = "0.2.1"
r2d2 = "0.8.2"
sentry = "0.12.0"
sentry-actix = "0.12.0"
serde = {version = "1.0.79", features = ["derive"]}
serde_json = "1.0.32"
