[package]
authors = ["Rotem Yaari <vmalloc@gmail.com>"]
edition = "2018"
name = "mailboxer"
version = "2.0.1"

[dependencies]
actix-web = "4"
anyhow = "1.0.65"
diesel = {version = "1.3.0", features = ["postgres", "r2d2"]}
diesel_migrations = "1.3.0"
dotenv = "0.15.0"
env_logger = "0.5.13"
futures = "0.1.25"
log = "0.4.5"
native-tls = "0.2.1"
r2d2 = "0.8.2"
sentry = {version = "0.27", features = ["anyhow"]}
sentry-actix = "0"
serde = {version = "1.0.79", features = ["derive"]}
serde_json = "1.0.32"
thiserror = "1.0.37"
tokio = {version = "1.24.2", features = ["rt", "rt-multi-thread", "macros"]}
